# nvim-rotate-chars

./: Cargo.toml  readme.md
benches/: rotate_content_benchmark.rs
config/: rotate_chars.lua
examples/: rotate.rs  simple_rotate.rs
src/: lib.rs  operator.rs
